fix:styles z-index

--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -25,6 +25,7 @@ nav {
   position: relative;
   top: -136px;
   border-radius: 50%;
+  z-index: 1;
   img {
     width: 187px;
     height: 200px;
